@@ -149,6 +149,14 @@ class TunerImpl {
   // argument. Supports all enumerations of MemType.
   template <typename T> MemType GetType();
 
+  // Rounding functions performing ceiling and division operations
+  size_t CeilDiv(const size_t x, const size_t y) {
+    return 1 + ((x - 1) / y);
+  }
+  size_t Ceil(const size_t x, const size_t y) {
+    return CeilDiv(x,y)*y;
+  }
+
   // Accessors to device data-types
   const Device device() const { return device_; }
   const Context context() const { return context_; }
