@@ -1,5 +1,6 @@
 
 Development branch (next version)
+- CLTune now automatically ensures global size is a multiple of the local workgroup size
 - Added GetBestResult() to the tuner's API to retrieve the best parameters programmatically
 - Changed std::initalizer_list in the AddParameters API to std::vector
 - Fixed a bug in the simulated annealing search method
